# Airflow-Integration-

./: .env  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  main.py
dags/: create_market_table_dag.py  etl_dag.py
etl/: extract.py  load.py  transform.py  validate.py
